增加话题和分类排序

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8425,7 +8425,7 @@ body {
 }
 
 .topics-index-page .topic-list .meta,
-categories-show-page .topic-list .meta {
+.categories-show-page .topic-list .meta {
   font-size: 0.9em;
   color: #b3b3b3;
 }
