--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -68,7 +68,7 @@ body {
     color: #444444;
 }
 
-.topics-index-page .topic-list .meta , categories-show-page .topic-list .meta{
+.topics-index-page .topic-list .meta , .categories-show-page .topic-list .meta {
       font-size:0.9em;
       color: #b3b3b3;
 }
