List user replies

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
 //style
+@import "./style";
 @import "../css/style";
 @import "topic_body";
 @import "../editor/css/simditor";
