--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8350,6 +8350,35 @@ button.close {
   }
 }
 
+/** 回复 **/
+
+.topic-reply hr {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.topic-reply a {
+  color: inherit;
+}
+
+.topic-reply .meta {
+  font-size: .9em;
+  color: #b3b3b3;
+}
+
+/* User profile page */
+
+.users-show-page .meta {
+  font-size: .9em;
+  color: #b3b3b3;
+}
+
+.users-show-page .rpely-content {
+  margin: 6px 0;
+}
+
+/* Topic Index Page */
+
 /* universal */
 
 body {
