--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8377,7 +8377,19 @@ button.close {
   margin: 6px 0;
 }
 
-/* Topic Index Page */
+/* Notifications badge */
+
+.notifications-badge {
+  margin-top: -1;
+}
+
+.notifications-badge .badge-fade {
+  background-color: #EBE8E8;
+}
+
+.notifications-badge .badge-hint {
+  background-color: #d15b47 !important;
+}
 
 /* universal */
 
