--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -26,4 +26,17 @@
   }
 }
 
-/* Topic Index Page */
+
+/* Notifications badge */
+
+.notifications-badge {
+  margin-top: -1;
+
+  .badge-fade {
+    background-color: #EBE8E8;
+  }
+
+  .badge-hint {
+    background-color: #d15b47 !important;;
+  }
+}
