Setup default home page

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,14 +1,15 @@
 /* universal */
 
 body {
-    font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial,sans-serif;
+    font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial, sans-serif;
 }
 
 /* Sticky footer styles */
 html {
     position: relative;
-    min-height: 100% ;
+    min-height: 100%;
 }
+
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
@@ -25,7 +26,7 @@ body {
     margin-top: 0px;
 }
 
-.navbar-static-top .dropdown-menu{
+.navbar-static-top .dropdown-menu {
     padding: 0px;
 }
 
@@ -34,14 +35,14 @@ body {
     line-height: 2.4;
 }
 
-.navbar-static-top .dropdown-menu li a .glyphicon{
+.navbar-static-top .dropdown-menu li a .glyphicon {
     margin-right: 8px;
 }
 
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100% ;
+    width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #000;
@@ -52,76 +53,74 @@ body {
     padding-left: 15px;
 }
 
-.footer .container p{
+.footer .container p {
     margin: 19px 0;
     color: #c1c1c1;
 }
 
-.footer .container p a{
+.footer .container p a {
     color: inherit;
 }
 
 /* User profile page */
-.users-show-page .user-info .thumbnail{
+.users-show-page .user-info .thumbnail {
     margin-bottom: 0px;
 }
 
-
 /* Topic Index Page */
 
-.categories-show-page .topic-list .nav > li > a , .topics-index-page .topic-list .nav > li > a{
-     position: relative;
-     display: block;
-     padding: 5px 14px;
-     font-size: 0.9em;
- }
+.categories-show-page .topic-list .nav > li > a, .topics-index-page .topic-list .nav > li > a, .root-page .topic-list .nav > li > a {
+    position: relative;
+    display: block;
+    padding: 5px 14px;
+    font-size: 0.9em;
+}
 
-.topics-index-page .topic-list a , .categories-show-page .topic-list a {
+.topics-index-page .topic-list a, .categories-show-page .topic-list a, .root-page .topic-list a {
     color: #444444;
 }
 
-.topics-index-page .topic-list .meta , .categories-show-page .topic-list .meta {
-      font-size:0.9em;
-      color: #b3b3b3;
-}
-
-.topics-index-page .topic-list .meta a , .categories-show-page .topic-list .meta a{
+.topics-index-page .topic-list .meta, .categories-show-page .topic-list .meta, .root-page .topic-list .meta {
+    font-size: 0.9em;
     color: #b3b3b3;
 }
 
-.topics-index-page .topic-list .badge , .categories-show-page .topic-list .badge {
+.topics-index-page .topic-list .meta a, .categories-show-page .topic-list .meta a, .root-page .topic-list .meta a {
+    color: #b3b3b3;
+}
+
+.topics-index-page .topic-list .badge, .categories-show-page .topic-list .badge, .root-page .topic-list .badge {
     background-color: #d8d8d8;
 }
 
-.topics-index-page .topic-list hr , .categories-show-page .topic-list hr{
+.topics-index-page .topic-list hr, .categories-show-page .topic-list hr, .root-page .topic-list hr {
     margin-top: 12px;
     margin-bottom: 12px;
     border: 0;
     border-top: 1px solid #dcebf5;
 }
 
-
 /* User profile page */
 
-.users-show-page .user-info .thumbnail{
+.users-show-page .user-info .thumbnail {
     margin-bottom: 0px;
 }
 
-.users-show-page .nav-tabs  {
+.users-show-page .nav-tabs {
     margin-bottom: 20px;
 }
 
-.users-show-page .nav-tabs >li.active > a{
+.users-show-page .nav-tabs > li.active > a {
     background-color: #fff;
 }
 
-.users-show-page .list-group  .list-group-item{
+.users-show-page .list-group .list-group-item {
     border: none;
     margin-bottom: 0px;
     border-bottom: 1px solid #efefef;
 }
 
-.users-show-page .list-group  .list-group-item .meta{
+.users-show-page .list-group .list-group-item .meta {
     color: #b3b3b3;
 }
 
